@startuml
' === Model Layer ===
class GameManager {
  - levels_: vector<LevelManager>
  - player_: Player
  - currentState_: GameState
  - playerName_: string
  + addLevel()
  + getCurrentLevel()
  + setState()
  + update()
  + handleInput()
}

class LevelManager {
  - towers_: vector<vector<Tower*>>
  - paths_: vector<Path>
  - waveManager_: WaveManager
  + placeTower()
  + removeTower()
  + getWaveManager()
}

class Player {
  - coins_: int
  - lives_: int
  + addCoins()
  + spendCoins()
  + loseLife()
}

class Tower {
  - position_: pair<float, float>
  - range_: float
  - fireRate_: float
  - level_: int
  + update()
  + getLevel()
  + upgrade()
}
class FireFlowerTower extends Tower
class IceTower extends Tower

class Enemy {
  - health_: float
  - speed_: float
  - position_: pair<float, float>
  - path_: Path
  + update()
  + takeDamage()
}
class GoombaEnemy extends Enemy
class KoopaEnemy extends Enemy
class ParagoombaEnemy extends Enemy
class BowserEnemy extends Enemy

class Projectile {
  - position_: pair<float, float>
  - velocity_: pair<float, float>
  - damage_: float
  - target_: Enemy*
  + update()
}
class FireballProjectile extends Projectile
class IceProjectile extends Projectile

class WaveManager {
  - activeEnemies_: vector<Enemy*>
  + startNextWave()
  + isWaveActive()
  + setEnemyFactories()
}

class Path {
  - waypoints_: vector<pair<float, float>>
  + getWaypoint()
}

' === Factory Pattern ===
class EnemyFactory <<factory>> {
  + createEnemy(path: Path): Enemy
}
WaveManager --> EnemyFactory : uses
note right of EnemyFactory
  <<factory pattern>>\nUsed to create Enemy objects dynamically
end note

' === State Pattern ===
abstract class GameState <<state>> {
  + enter()
  + update()
  + handleInput()
  + exit()
}
class MainMenuState extends GameState
class PlayingState extends GameState
class PausedState extends GameState
class GameOverState extends GameState
class VictoryState extends GameState
class LevelSelectState extends GameState
class TowerPlacementState extends GameState
GameState <|-- MainMenuState
GameState <|-- PlayingState
GameState <|-- PausedState
GameState <|-- GameOverState
GameState <|-- VictoryState
GameState <|-- LevelSelectState
GameState <|-- TowerPlacementState
GameManager --> GameState : currentState
note right of GameState
  <<state pattern>>\nImplements game phases as interchangeable states
end note

' === View Layer ===
class GameView
class LevelView
class TowerView
class EnemyView
class HUDView
class MainMenuView
class VictoryView
class GameOverView

' === Controller Layer ===
class TowerPlacementController

' === Relationships ===
GameManager "1" o-- "*" LevelManager
GameManager "1" o-- "1" Player
GameManager "1" o-- "1" GameState : currentState
LevelManager "1" o-- "*" Tower
LevelManager "1" o-- "*" Path
LevelManager "1" o-- "1" WaveManager
WaveManager "1" o-- "*" Enemy
Tower "1" o-- "*" Projectile
Projectile "1" o-- "1" Enemy

Tower <|-- FireFlowerTower
Tower <|-- IceTower
Enemy <|-- GoombaEnemy
Enemy <|-- KoopaEnemy
Enemy <|-- ParagoombaEnemy
Enemy <|-- BowserEnemy
Projectile <|-- FireballProjectile
Projectile <|-- IceProjectile

GameView o-- LevelView
GameView o-- TowerView
GameView o-- EnemyView
GameView o-- HUDView
MainMenuView o-- GameManager
VictoryView o-- GameManager
GameOverView o-- GameManager
TowerPlacementController o-- LevelManager
TowerPlacementController o-- Player

@enduml 